Initial commit of Cypress tests with basic load scenario

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Nigel Greenway",
   "license": "MIT",
   "dependencies": {
+    "cypress": "^1.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
