--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
   ],
   "plugins": [
     "transform-class-properties",
-    "babel-plugin-styled-components"
+    "babel-plugin-styled-components",
+    "istanbul"
   ]
 }
