--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
   ],
   "plugins": [
     "transform-class-properties",
-    "babel-plugin-styled-components",
-    "istanbul"
+    "istanbul",
+    "styled-jsx/babel"
   ]
 }
