--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
-    "styled-components": "^2.1.2"
+    "styled-jsx": "^2.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
